--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,3 +41,22 @@ iframe#tela {
     width: 267px;
     height: 469px;
 }
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.637);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.603);
+    transform: translate(-8px, 0px);
+    box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.637);
+    transition: transform 0.3s;
+}
